fixed quantity display on mobile

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,10 @@ html {
     overflow-x: hidden;
 }
 
+.rounder {
+    border-radius: 10px;
+}
+
 .bg-blue {
     background-color: #00a7e9;
 }
